application/keycloak/keycloak-events-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app-env
  labels:
    app: keycloak-events-app-deployment

  name: keycloak-events-application
  annotations:
    type: app
    domain: Keycloak
    business: Security
spec:
  selector:
    matchLabels:
      app: keycloak-events-app
  template:
    metadata:
      labels:
        app: keycloak-events-app
        version: v1
    spec:
      containers:
          - name: keycloak-events-application-container
            image: srochg/keycloak-events:0.0.6
            resources:
              limits:
                cpu: "1"
                memory: "1Gi"
              requests:
                cpu: "0.5"
                memory: "512Mi"
            imagePullPolicy: Always
            ports:
              - containerPort: 8080
            readinessProbe:
              httpGet:
                path: /_app-state/health
                port: 8080
              initialDelaySeconds: 20
              periodSeconds: 10
            startupProbe:
              httpGet:
                path: /_app-state/health
                port: 8080
              periodSeconds: 10
              failureThreshold: 30
              successThreshold: 1

            livenessProbe:
              httpGet:
                path: /_app-state/health #/realms/master
                port: 8080

              initialDelaySeconds: 30
              periodSeconds: 10
              failureThreshold: 5
              timeoutSeconds: 5
              successThreshold: 1
              terminationGracePeriodSeconds: 30
      restartPolicy: Always
