application/keycloak/keyckoak-events-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app-env 
  labels:
    app: keycloak-events-app    
  name: keycloak-events-service
  annotations:
    type: service
    domain: Keycloak
    business: Security
  
spec:
  type: ClusterIP
  selector:
    app: keycloak-events-app
  ports:
    - name: http-porta-web
      protocol: TCP
      port: 8080
      targetPort: 8080  
  sessionAffinity: "ClientIP"
