application/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app-env 
  labels:
    app: keycloak-app
    version: 21.0.2
  name: keycloak-service
  annotations:
    type: service
    domain: keycloak
    business: security
  
spec:
  type: LoadBalancer
  selector:
    app: keycloak-app
  ports:
    - name: http-porta-web
      protocol: TCP
      port: 8888
      targetPort: 8080  
  sessionAffinity: "ClientIP"
