application/keycloak/keycloak-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway  
  namespace: app-env
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts: ["*"]
      tls:
        httpsRedirect: true # sends 301 redirect for http requests

    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      hosts: ["*"]
      tls:
        mode: SIMPLE # enables HTTPS on this port
        serverCertificate: /etc/certs/servercert.pem
        privateKey: /etc/certs/privatekey.pem


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:  
  name: keycloak-gateway-virtual-service
spec:  
  hosts: ["*"]    
  gateways:
  - app-env/keycloak-gateway
  http:
  - match:
    - uri:
        prefix: "/identity-provider"
    route:
    - destination:        
        host: keycloak-service.app-env
        port:
          number: 8888

    corsPolicy:      
        allowOrigin: ["*"]	   
        allowMethods: ["GET", "POST", "PUT", "DELETE", "OPTIONS","PATCH"]
        allowHeaders: ["*"]
        maxAge: "24h"
