application/keycloak/keycloak-gateway_v1.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: keycloak-gateway-v1
  namespace: app-env
spec:
  gatewayClassName: istio
  listeners:
  - name: http    
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All

---


apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-http-route
  namespace: app-env
spec:
  parentRefs:
  - name: keycloak-gateway-v1
    namespace: app-env  
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    backendRefs:
    - name: keycloak-service
      port: 8888
